--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "eslint-config-next": "13.4.10",
+    "immer": "^10.0.2",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
